Fix T50032: Wrong render result when same image is used with and without alpha